@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=${prefix}/include
+
+Name: webhost
+Description: Embedded web hosting framework
+Version: @VERSION@
+Requires: QtCore QtNetwork
+Libs: -L${libdir} -lwebhost
+Cflags: -I${includedir} -I/usr/include
